fixed overflow of text titles, FINALLY

--- a/less/app/global.less
+++ b/less/app/global.less
@@ -167,6 +167,7 @@
 
   #content-view {
     min-height: 500px;
+    padding-top: 0px;
     background: @mp-content-background;
   }
 
