--- a/less/app/mobile.less
+++ b/less/app/mobile.less
@@ -28,12 +28,8 @@
 
 
   /* Pile */
-  #pile-results td.draggable {
-    display: none;
-  }
-  
-  #pile-results td.avatar {
-    padding-left: 12px;
+	#pile-results a.subject {
+    max-width: 70%;
   }
 
 }
