--- a/less/app/tablet.less
+++ b/less/app/tablet.less
@@ -11,12 +11,8 @@
   }
 
   /* Pile */
-  #pile-results td.draggable {
-    display: none;
-  }
-
-  #pile-results td.avatar {
-    padding-left: 4px;
+	#pile-results a.subject {
+    max-width: 80%;
   }
 
 }
