--- a/less/theme.less
+++ b/less/theme.less
@@ -2,6 +2,11 @@
 @mp-navigation-on-background: @grayLight;
 @mp-navigation-on-color:      @black;
 
+// Auth
+@mp-auth-background:          @white;
+@mp-auth-color:               @black;
+
+
 // Topbar
 @mp-topbar-background:        @black;
 @mp-topbar-logo-font-family:  'League Spartan';
@@ -42,7 +47,7 @@
 @mp-tools-margin:             0 0 20px 0;
 
 // Search
-@mp-search-item-spacing:      15px;
+@mp-search-item-spacing:      12px 15px;
 @mp-search-item-margin-bottom:0px;
 @mp-search-subject-color:     @black;
 @mp-search-subject-font:      'SourceSansPro-Bold';
